--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/Quevalidation.jsx", "components/Quecont.jsx", "components/Background.jsx", "components/BIglogo.jsx", "components/Footernav.jsx", "components/Maincont.jsx", "components/Smalllogo.jsx", "app/Quizcreate.jsx", "app/Home.jsx", "app/Quizconformationpage.jsx", "app/History.jsx"  ]
 }
